syntax = "proto3";


package greet.practice.level3;      // proto's package proto entity management


option go_package = "github.com/amogh2019/dummy_go_service/greet/proto/practice/level3";

message SampleMessage{
    uint32 id = 1;
    bool is_active = 2;
    string name = 3;
    repeated string alt_names = 4;
}

/*
to generate  go file
call this from directory root */
//protoc -Igreet/proto/practice/level3 --go_opt=module=github.com/amogh2019/dummy_go_service --go_out=. greet/proto/practice/level3/*.proto

