syntax = "proto3";


package greet.practice.level3;      // proto's package proto entity management


option go_package = "github.com/amogh2019/dummy_go_service/greet/proto/practice/level3";

enum EyeColor{
    EYECOLOR_UNIDENTIFIED = 0;
    EYECOLOR_BLUE = 1;
    EYECOLOR_GREEN = 2;
    EYECOLOR_BLACK = 3;
}

message SampleMessage2{
    uint32 id = 1;
    EyeColor eyeColor = 2;
}





/*
to generate  go file
call this from directory root */
//protoc -Igreet/proto/practice/level3 --go_opt=module=github.com/amogh2019/dummy_go_service --go_out=. greet/proto/practice/level3/*.proto

