syntax = "proto3";


package greet.practice.level3;      // proto's package proto entity management


option go_package = "github.com/amogh2019/dummy_go_service/greet/proto/practice/level3";


message CityList{
    repeated string cities = 1;
}


message Country{
    map<string, CityList> stateWiseCityList = 1;
}





/*
to generate  go file
call this from directory root */
//protoc -Igreet/proto/practice/level3 --go_opt=module=github.com/amogh2019/dummy_go_service --go_out=. greet/proto/practice/level3/*.proto

